--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,7 @@ on:
 
 env:
   TAG: http-echo:loadtest
+  CLUSTER: echo-cluster
 
 jobs:
   load-test:
@@ -34,3 +35,9 @@ jobs:
             --for=condition=ready pod \
             --selector=app.kubernetes.io/component=controller \
             --timeout=90s
+
+      - name: Load Docker Image
+        run: kind load docker-image $TAG --name $CLUSTER
+
+      - name: Deploy http-echo service
+        run: kubectl apply -f ci/service-deployment.yaml
