--- a/.github/workflows/loadtest.yaml
+++ b/.github/workflows/loadtest.yaml
@@ -41,3 +41,13 @@ jobs:
 
       - name: Deploy http-echo service
         run: kubectl apply -f ci/service-deployment.yaml
+
+      - name: Load Test set up
+        uses: grafana/setup-k6-action@v1
+        with:
+          k6-version: '0.52.0'
+
+      - name: Run Load Test
+        uses: grafana/run-k6-action@v1
+        with:
+          path: ./ci/load-test.js
