--- a/.github/workflows/loadtest.yaml
+++ b/.github/workflows/loadtest.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Deploy Ingress Controller
         run: |
           kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
-          kubectl wait --namespace ingress-nginx \
+          kubectl wait -n ingress-nginx \
             --for=condition=ready pod \
             --selector=app.kubernetes.io/component=controller \
             --timeout=90s
@@ -43,7 +43,9 @@ jobs:
         run: |
           kubectl create namespace loadtest
           kubectl create -f ci/service-deployment.yaml -n loadtest
-          kubectl wait deployments --all --for condition=available -n loadtest
+          kubectl wait -n loadtest \
+             --for=condition=ready pod \
+             --all --timeout=90s
 
       - name: Load Test set up
         uses: grafana/setup-k6-action@v1
